# Viator-Monster-Channel

./: .gitignore  CMakeLists.txt  installer.iss
.github/workflows/: main.yml
source/: DSP_Module.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
source/DSP/: Compressor.cpp  Compressor.h  GraphicEQ.h  ModuleBase.cpp  ModuleBase.h  Waveshaper.cpp  Waveshaper.h  filter.cpp  filter.h  utils.h
source/GUI/: look.h
source/GUI/Components/: DriveViewer.cpp  DriveViewer.h  GRMeter.cpp  GRMeter.h  GraphicEQ.h  LevelMeter.cpp  LevelMeter.h  ModuleEditor.cpp  ModuleEditor.h  ParaEQ.h  PresetBrowser.cpp  PresetBrowser.h  PultecEQ.h
source/GUI/lookandfeel/: Colors.h  Gradient.h  MenuLAF.cpp  MenuLAF.h  SliderLAF.cpp  SliderLAF.h  TextButtonLAF.cpp  TextButtonLAF.h
source/GUI/panels/: CompEditor.cpp  CompEditor.h  ConsoleEditor.cpp  ConsoleEditor.h  PluginUnlocker.cpp  PluginUnlocker.h  PreampEditor.cpp  PreampEditor.h  SurgicalEditor.cpp  SurgicalEditor.h  ToneEditor.cpp  ToneEditor.h  info_panel.h
source/GUI/utils/: InterfaceDefines.h  window.h
source/Global/: Globals.cpp  Globals.h  Parameters.cpp  Parameters.h
